--- a/src/govuk/components/label/label.yaml
+++ b/src/govuk/components/label/label.yaml
@@ -9,7 +9,7 @@ params:
   description: If `text` is set, this is not required. HTML to use within the label. If `html` is provided, the `text` argument will be ignored.
 - name: for
   type: string
-  required: true
+  required: false
   description: The value of the for attribute, the id of the input the label is associated with.
 - name: isPageHeading
   type: boolean
