Unmark select component option values as required
Followup to d824b009a22839daf5f9a61b8dcd30ea681320d7 and feedback
on corresponding pull request
(https://github.com/alphagov/govuk-frontend/pull/2043)

--- a/src/govuk/components/select/select.yaml
+++ b/src/govuk/components/select/select.yaml
@@ -14,7 +14,7 @@ params:
   params:
   - name: value
     type: string
-    required: true
+    required: false
     description: Value for the option item.
   - name: text
     type: string
