--- a/src/govuk/components/label/label.yaml
+++ b/src/govuk/components/label/label.yaml
@@ -65,5 +65,5 @@ examples:
     data:
       text: National Insurance number
       attributes:
-        first-attribute: 'true'
-        second-attribute: 'false'
+        first-attribute: 'foo'
+        second-attribute: 'bar'
