--- a/src/govuk/components/phase-banner/phase-banner.yaml
+++ b/src/govuk/components/phase-banner/phase-banner.yaml
@@ -47,8 +47,8 @@ examples:
     data:
       text: This is a new service – your feedback will help us to improve it
       attributes:
-        first-attribute: true
-        second-attribute: false
+        first-attribute: foo
+        second-attribute: bar
   - name: tag html
     hidden: true
     data:
