remove bool type strings from attributes

--- a/src/govuk/components/details/details.yaml
+++ b/src/govuk/components/details/details.yaml
@@ -102,4 +102,4 @@ examples:
     summaryText: Expand me
     attributes:
       data-some-data-attribute: i-love-data
-      another-attribute: true
+      another-attribute: foo
