Add failing test
This test fails with:

```
Character count › when JavaScript is available › when counting characters › when the ID starts with a number › still works correctly

    DOMException: Failed to execute 'querySelector' on 'Element': '[id=1_more-detail-info]' is not a valid selector.
```

which matches the console error reported in the issue [1]

[1]: https://github.com/alphagov/govuk-frontend/issues/2058

--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -223,3 +223,11 @@ examples:
       classes: app-character-count--custom-modifier
       errorMessage:
         text: Error message
+  - name: with id starting with number
+    hidden: true
+    data:
+      name: more-detail
+      id: 1_more-detail
+      maxlength: 10
+      label:
+        text: Can you provide more detail?
