Do not run on forks

--- a/.github/workflows/diff-change-to-dist.yaml
+++ b/.github/workflows/diff-change-to-dist.yaml
@@ -8,6 +8,8 @@ jobs:
   generate-diff:
     name: Generate Diff
     runs-on: ubuntu-latest
+    # Abort if run from a fork, as token won't have write access to post comment
+    if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - uses: actions/checkout@v2
         with:
