--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "express-validator": "^6.6.1",
     "front-matter": "^4.0.2",
     "glob": "^7.1.4",
-    "moaland-elements-sass": "3.1.3",
-    "moaland_frontend_toolkit": "^9.0.0",
-    "moaland_template_jinja": "^0.26.0",
+    "govuk-elements-sass": "3.1.3",
+    "govuk_frontend_toolkit": "^9.0.0",
+    "govuk_template_jinja": "^0.26.0",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "3.1.0",
     "gulp-debug": "^4.0.0",
