--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   run-tests:
-    name: 🧪 Run tests
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
