Use npm ci to install dependencies
In automated environments, it’s preferable to use `npm ci` over `npm install`.

This also means we can remove the check for changes to `package-lock.json`, because npm ci does this for us:

> If dependencies in the package lock do not match those in package.json, npm ci will exit with an error, instead of updating the package lock. [1]

[1]: https://docs.npmjs.com/cli/v6/commands/npm-ci

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,12 +20,7 @@ jobs:
           node-version: "${{ steps.nvm.outputs.NVMRC }}"
 
       - name: Install dependencies
-        run: npm install
-
-      - name: Check package-lock.json is up to date
-        # If there are new changes to package-lock.json after running npm
-        # install, this suggests package-lock.json needs to be updated
-        run: git diff --exit-code --quiet package-lock.json
+        run: npm ci
 
       - name: Run tests
         run: npm test
