Tweak description for top-level hidden option
Co-authored-by: Eoin Shaughnessy <eoin.shaughnessy@digital.cabinet-office.gov.uk>

--- a/src/govuk/components/cookie-banner/cookie-banner.yaml
+++ b/src/govuk/components/cookie-banner/cookie-banner.yaml
@@ -6,7 +6,7 @@ params:
 - name: hidden
   type: boolean
   required: false
-  description: Defaults to `false`. If you set it to `true`, the whole cookie banner (including all messages within) is hidden. You can use `hidden` for client-side implementations where the cookie banner HTML is present, but hidden until it is shown using JavaScript.
+  description: Defaults to `false`. If you set it to true, the whole cookie banner is hidden, including all messages within it. You can use `hidden` for client-side implementations where the cookie banner HTML is present, but hidden until it is shown using JavaScript.
 - name: classes
   type: string
   required: false
