Set IDs using idPrefix + row number
The IDs were initially hardcoded, but are now dynamic, to avoid having duplicate IDs.

--- a/src/govuk/components/task-list/task-list.yaml
+++ b/src/govuk/components/task-list/task-list.yaml
@@ -54,7 +54,8 @@ params:
 
 examples:
   - name: default
-    data: 
+    data:
+      idPrefix: "task-list-example"
       rows:
         - title:
             text: Section 1
