Change 'rows' to 'items'
Whilst some existing components use rows and others use items, 'items' is more generic, and is closer to the HTML tag name ("list item") and the class name (`govuk-task-list__item`).

--- a/src/govuk/components/task-list/task-list.yaml
+++ b/src/govuk/components/task-list/task-list.yaml
@@ -1,13 +1,13 @@
 params:
-- name: rows
+- name: items
   type: array
   required: true
-  description: Array of row item objects.
+  description: Array of item objects.
   params:
 - name: classes
   type: string
   required: false
-  description: Classes to add to the row `div`
+  description: Classes to add to the item `div`
 - name: title.text
   type: string
   required: true
@@ -56,7 +56,7 @@ examples:
   - name: default
     data:
       idPrefix: "task-list-example"
-      rows:
+      items:
         - title:
             text: Section 1
           href: '#'
