Test character count where id has CSS characters
Previously, the character count could fail if the textarea ID contained characters that have a special meaning in CSS.

It appears that this may not be an issue since we started quoting the ID in c205e1b6988e7b57aec97683030b3372ce3443d6 – the example works, and test passes without making any changes – but it's still worth adding the test to prevent future regressions.

--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -231,3 +231,10 @@ examples:
       maxlength: 10
       label:
         text: Can you provide more detail?
+  - name: with id with special characters
+    data:
+      id: user1.profile[address]
+      name: address
+      maxlength: 10
+      label:
+        text: Full address
