Add more options

--- a/src/govuk/components/select/select.yaml
+++ b/src/govuk/components/select/select.yaml
@@ -148,6 +148,39 @@ examples:
         -
           value: 16
           text: Ministry of Justice
+        -
+          value: 17
+          text: Northern Ireland Office
+        -
+          value: 18
+          text: HM Land Registry
+        -
+          value: 19
+          text: HM Revenue & Customs
+        -
+          value: 20
+          text: The Charity Commission
+        -
+          value: 21
+          text: Competition and Markets Authority
+        -
+          value: 22
+          text: Food Standards Agency
+        -
+          value: 23
+          text: Forestry Commission
+        -
+          value: 24
+          text: Office of Rail and Road
+        -
+          value: 25
+          text: Ofgem
+        -
+          value: 26
+          text: Ofqual
+        -
+          value: 27
+          text: Ofsted
   - name: with hint text and error message
     data:
       id: select-2
